Add support for translate and blocktranslate tags

--- a/tests/i18n/commands/templates/test.html
+++ b/tests/i18n/commands/templates/test.html
@@ -85,6 +85,8 @@ continued here.{% endcomment %}
 {% blocktrans context 'Special blocktrans context wrapped in single quotes' %}Translatable literal with context wrapped in single quotes{% endblocktrans %}
 {% blocktrans context "Special blocktrans context wrapped in double quotes" %}Translatable literal with context wrapped in double quotes{% endblocktrans %}
 
+{% blocktranslate %}blocktranslate text{% endblocktranslate %}
+{% translate "translate text" %}
 
 {# BasicExtractorTests.test_blocktrans_trimmed #}
 {% blocktrans %}
