Fixed #30049 -- Fix GIS widget init after "Add another" in admin inlines

--- a/django/contrib/gis/templates/gis/openlayers.html
+++ b/django/contrib/gis/templates/gis/openlayers.html
@@ -35,6 +35,6 @@
             name: '{{ name }}'
         };
         {% endblock %}
-        var {{ module }} = new MapWidget(options);
+        window.{{ module }} = new MapWidget(options);
     </script>
 </div>
