Match @import rule and url() statement exclude of the css comment /* */ in the css file source code

--- a/tests/staticfiles_tests/project/documents/cached/styles.css
+++ b/tests/staticfiles_tests/project/documents/cached/styles.css
@@ -1,1 +1,15 @@
 @import url("other.css");
+
+/* Ignore @import rule and url() statement inside comment */
+
+/* @import url("non_exist.css") */
+
+/* url("non_exist.png") */
+
+/*
+
+@import url("non_exist.css")
+
+url("non_exist.png")
+
+*/
