Added django logo on Technical 404 page

--- a/django/views/templates/technical_404.html
+++ b/django/views/templates/technical_404.html
@@ -20,6 +20,7 @@
     #info ol li { font-family: monospace; }
     #summary { background: #ffc; }
     #explanation { background:#eee; border-bottom: 0px none; }
+    .django-logo { float: right;}
   </style>
 </head>
 <body>
@@ -41,6 +42,9 @@
       </tr>
       {% endif %}
     </table>
+    <div class="django-logo">
+      <img src="https://miro.medium.com/max/2400/1*HVKOLLX7wprRbHTl2IPDcQ.png" alt="django" width="25%" />
+    </div>
   </div>
   <div id="info">
     {% if urlpatterns %}
