--- a/js_tests/qunit/qunit.css
+++ b/js_tests/qunit/qunit.css
@@ -1,15 +1,22 @@
 /*!
- * QUnit 2.0.1
+ * QUnit 2.9.3
  * https://qunitjs.com/
  *
  * Copyright jQuery Foundation and other contributors
  * Released under the MIT license
  * https://jquery.org/license
  *
- * Date: 2016-07-23T19:39Z
+ * Date: 2019-10-08T15:49Z
  */
 
 /** Font Family and Sizes */
+
+
+[id^=qunit] button {
+	font-size: initial;
+	border: initial;
+	background-color: buttonface;
+}
 
 #qunit-tests, #qunit-header, #qunit-banner, #qunit-testrunner-toolbar, #qunit-filteredTest, #qunit-userAgent, #qunit-testresult {
 	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
@@ -118,7 +125,7 @@
 
 #qunit-modulefilter-search {
 	box-sizing: border-box;
-	width: 400px;
+	min-width: 400px;
 }
 
 #qunit-modulefilter-search-container:after {
@@ -131,7 +138,7 @@
 #qunit-modulefilter-dropdown {
 	/* align with #qunit-modulefilter-search */
 	box-sizing: border-box;
-	width: 400px;
+	min-width: 400px;
 	position: absolute;
 	right: 0;
 	top: 50%;
@@ -204,6 +211,7 @@
 #qunit-modulefilter-dropdown-list .clickable {
 	display: block;
 	padding-left: 0.15em;
+	padding-right: 0.5em;
 }
 
 
@@ -226,7 +234,8 @@
 #qunit-tests li.running,
 #qunit-tests li.pass,
 #qunit-tests li.fail,
-#qunit-tests li.skipped {
+#qunit-tests li.skipped,
+#qunit-tests li.aborted {
 	display: list-item;
 }
 
@@ -235,7 +244,7 @@
 }
 
 #qunit-tests.hidepass li.running,
-#qunit-tests.hidepass li.pass {
+#qunit-tests.hidepass li.pass:not(.todo) {
 	visibility: hidden;
 	position: absolute;
 	width:   0;
@@ -374,12 +383,16 @@
 
 #qunit-banner.qunit-fail                    { background-color: #EE5757; }
 
+
+/*** Aborted tests */
+#qunit-tests .aborted { color: #000; background-color: orange; }
 /*** Skipped tests */
 
 #qunit-tests .skipped {
 	background-color: #EBECE9;
 }
 
+#qunit-tests .qunit-todo-label,
 #qunit-tests .qunit-skipped-label {
 	background-color: #F4FF77;
 	display: inline-block;
@@ -390,18 +403,34 @@
 	margin: -0.4em 0.4em -0.4em 0;
 }
 
+#qunit-tests .qunit-todo-label {
+	background-color: #EEE;
+}
+
 /** Result */
 
 #qunit-testresult {
-	padding: 0.5em 1em 0.5em 1em;
-
 	color: #2B81AF;
 	background-color: #D2E0E6;
 
 	border-bottom: 1px solid #FFF;
 }
+#qunit-testresult .clearfix {
+	height: 0;
+	clear: both;
+}
 #qunit-testresult .module-name {
 	font-weight: 700;
+}
+#qunit-testresult-display {
+	padding: 0.5em 1em 0.5em 1em;
+	width: 85%;
+	float:left;
+}
+#qunit-testresult-controls {
+	padding: 0.5em 1em 0.5em 1em;
+  width: 10%;
+	float:left;
 }
 
 /** Fixture */
