--- a/django/contrib/admin/static/admin/css/widgets.css
+++ b/django/contrib/admin/static/admin/css/widgets.css
@@ -27,7 +27,7 @@
 }
 
 .selector-chosen h2 {
-    background: #79aec8;
+    background: #609ab6;
     color: #fff;
 }
 
@@ -423,7 +423,7 @@ span.clearable-file-input label {
 }
 
 .calendar td.selected a {
-    background: #79aec8;
+    background: #609ab6;
     color: #fff;
 }
 
@@ -445,7 +445,7 @@ span.clearable-file-input label {
 
 .calendar td a:focus, .timelist a:focus,
 .calendar td a:hover, .timelist a:hover {
-    background: #79aec8;
+    background: #609ab6;
     color: white;
 }
 
