--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -236,7 +236,7 @@ fieldset .collapse-toggle {
 fieldset.collapsed .collapse-toggle {
     background: transparent;
     display: inline;
-    color: #447e9b;
+    color: #417690;
 }
 
 /* MONOSPACE TEXTAREAS */
