--- a/django/contrib/admin/static/admin/css/nav_sidebar.css
+++ b/django/contrib/admin/static/admin/css/nav_sidebar.css
@@ -16,7 +16,7 @@
     background-color: #ffffff;
     cursor: pointer;
     font-size: 20px;
-    color: #447e9b;
+    color: #417690;
 }
 
 [dir="rtl"] .toggle-nav-sidebar {
