--- a/django/contrib/admin/static/admin/css/widgets.css
+++ b/django/contrib/admin/static/admin/css/widgets.css
@@ -133,7 +133,7 @@ a.selector-chooseall, a.selector-clearall {
 
 a.active.selector-chooseall:focus, a.active.selector-clearall:focus,
 a.active.selector-chooseall:hover, a.active.selector-clearall:hover {
-    color: #447e9b;
+    color: #417690;
 }
 
 a.active.selector-chooseall, a.active.selector-clearall {
