Fixed #25281 -- Make permission strings unique to identify permissions.

--- a/tests/auth_tests/templates/context_processors/auth_attrs_perm_in_perms.html
+++ b/tests/auth_tests/templates/context_processors/auth_attrs_perm_in_perms.html
@@ -1,4 +1,6 @@
 {% if 'auth' in perms %}Has auth permissions{% endif %}
-{% if 'auth.add_permission' in perms %}Has auth.add_permission permissions{% endif %}
+{% if 'auth.permission' in perms %}Has auth.permission permissions{% endif %}
+{% if 'auth.permission.add_permission' in perms %}Has auth.permission.add_permission permissions{% endif %}
 {% if 'nonexistent' in perms %}nonexistent perm found{% endif %}
 {% if 'auth.nonexistent' in perms %}auth.nonexistent perm found{% endif %}
+{% if 'auth.permission.nonexistent' in perms %}auth.permission.nonexistent perm found{% endif %}
