--- a/tests/auth_tests/templates/context_processors/auth_attrs_perms.html
+++ b/tests/auth_tests/templates/context_processors/auth_attrs_perms.html
@@ -1,4 +1,6 @@
 {% if perms.auth %}Has auth permissions{% endif %}
-{% if perms.auth.add_permission %}Has auth.add_permission permissions{% endif %}
+{% if perms.auth.permission %}Has auth.permission permissions{% endif %}
+{% if perms.auth.permission.add_permission %}Has auth.permission.add_permission permissions{% endif %}
 {% if perms.nonexistent %}nonexistent perm found{% endif %}
 {% if perms.auth.nonexistent in perms %}auth.nonexistent perm found{% endif %}
+{% if perms.auth.permission.nonexistent in perms %}auth.permission.nonexistent perm found{% endif %}
