--- a/django/contrib/admindocs/templates/admin_doc/template_detail.html
+++ b/django/contrib/admindocs/templates/admin_doc/template_detail.html
@@ -4,7 +4,7 @@
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; <a href="{% url 'django-admindocs-docroot' %}">{% translate 'Documentation' %}</a>
+&rsaquo; <a href="{% url 'admindocs:django-admindocs-docroot' %}">{% translate 'Documentation' %}</a>
 &rsaquo; {% translate 'Templates' %}
 &rsaquo; {{ name }}
 </div>
@@ -23,5 +23,5 @@
 {% endfor %}
 </ol>
 
-<p class="small"><a href="{% url 'django-admindocs-docroot' %}">&lsaquo; {% translate 'Back to Documentation' %}</a></p>
+<p class="small"><a href="{% url 'admindocs:django-admindocs-docroot' %}">&lsaquo; {% translate 'Back to Documentation' %}</a></p>
 {% endblock %}
