Refs #35875 -- Added dark mode support in additional views.
Thanks Thibaud Colas for the review.

--- a/django/views/templates/technical_404.html
+++ b/django/views/templates/technical_404.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Page not found at {{ request.path_info }}</title>
+  <meta name="color-scheme" content="light" />
   <meta name="robots" content="NONE,NOARCHIVE">
   <style>
     html * { padding:0; margin:0; }
