Fixed #21080 -- Use a lexer for url substitutions in ManifestStaticFilesStorage.

--- a/tests/staticfiles_tests/project/documents/cached/import.css
+++ b/tests/staticfiles_tests/project/documents/cached/import.css
@@ -1,1 +1,9 @@
 @import 'styles.css';
+@import url("/static/styles_root.css");
+@import url(styles.css) layer(default);
+@import url("styles.css") screen and (orientation: landscape);
+@import url("styles.css") supports((not (display: grid)) and (display: flex))
+  screen and (width <= 400px);
+
+/* @import url("/static/m/css/base.css"); */
+/* @import url("m/css/base.css"); */
