Fixed #36513 -- Improved text contrast for admin M2M multi-select widget.
Explicitly set the text color for the admin M2M widget to ensure
selected rows remain readable in browsers like Microsoft Edge and
Firefox when the widget was not focused.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -187,6 +187,7 @@ form .aligned select + div.help {
 
 form .aligned select option:checked {
     background-color: var(--selected-row);
+    color: var(--body-fg);
 }
 
 form .aligned ul li {
