--- a/django/contrib/admin/templates/admin/base.html
+++ b/django/contrib/admin/templates/admin/base.html
@@ -1,4 +1,5 @@
 {% load i18n static %}<!DOCTYPE html>
+{% load admin_tags %}
 {% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
 <head>
@@ -7,9 +8,7 @@
 {% block dark-mode-vars %}
   <link rel="stylesheet" href="{% static "admin/css/dark_mode.css" %}">
   <script src="{% static "admin/js/theme.js" %}" 
-  {% if csp_nonce %}
-    nonce="{{ csp_nonce }}"
-  {% endif %}
+  {% csp_nonce_attr %}
   ></script>
 {% endblock %}
 {% if not is_popup and is_nav_sidebar_enabled %}
@@ -17,9 +16,7 @@
   <script
   src="{% static 'admin/js/nav_sidebar.js' %}"
   defer
-  {% if csp_nonce %}
-    nonce="{{ csp_nonce }}"
-  {% endif %}
+  {% csp_nonce_attr %}
 ></script>
 
 {% endif %}
