--- a/django/contrib/admin/templates/admin/change_form.html
+++ b/django/contrib/admin/templates/admin/change_form.html
@@ -1,12 +1,11 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls static admin_modify %}
+{% load admin_tags %}
 
 {% block title %}{% if errors %}{% translate "Error:" %} {% endif %}{{ block.super }}{% endblock %}
 {% block extrahead %}{{ block.super }}
 <script src="{% url 'admin:jsi18n' %}"
-{% if csp_nonce %}
-    nonce="{{ csp_nonce }}"
-  {% endif %}></script>
+{% csp_nonce_attr %}></script>
 {{ media }}
 {% endblock %}
 
@@ -70,9 +69,7 @@
 {% block admin_change_form_document_ready %}
     <script id="django-admin-form-add-constants"
             src="{% static 'admin/js/change_form.js' %}"
-            {% if csp_nonce %}
-    nonce="{{ csp_nonce }}"
-  {% endif %}
+            {% csp_nonce_attr %}
             {% if adminform and add %}
                 data-model-name="{{ opts.model_name }}"
             {% endif %}
