Fixed #36853 -- Fixed technical 500 and 404 email CSS support.

--- a/django/views/templates/technical_500.html
+++ b/django/views/templates/technical_500.html
@@ -10,7 +10,7 @@
     body * { padding:10px 20px; }
     body * * { padding:0; }
     body { font-family: sans-serif; background-color:#fff; color:#000; }
-    body > :where(header, main, footer) { border-bottom:1px solid #ddd; }
+    body > header, body > main, body > footer { border-bottom:1px solid #ddd; }
     h1 { font-weight:normal; }
     h2 { margin-bottom:.8em; }
     h3 { margin:1em 0 .5em 0; }
