--- a/django/views/templates/technical_404.html
+++ b/django/views/templates/technical_404.html
@@ -9,7 +9,7 @@
     body * { padding:10px 20px; }
     body * * { padding:0; }
     body { font-family: sans-serif; background:#eee; color:#000; }
-    body > :where(header, main, footer) { border-bottom:1px solid #ddd; }
+    body > header, body > main, body > footer { border-bottom:1px solid #ddd; }
     h1 { font-weight:normal; margin-bottom:.4em; }
     h1 small { font-size:60%; color:#666; font-weight:normal; }
     table { border:none; border-collapse: collapse; width:100%; }
